FilledBeeJarIngredient now shows filled jars for every registered bee type + vanilla